--- a/src/Ray.BiliBiliTool.Console/appsettings.json
+++ b/src/Ray.BiliBiliTool.Console/appsettings.json
@@ -10,8 +10,8 @@
   "DailyTaskConfig": {
     "IsWatchVideo": true, //是否观看视频
     "IsShareVideo": true, //是否分享视频
-    "NumberOfCoins": 5, //每日设定的投币数 [0,5]
-    "SelectLike": true, //投币时是否同时点赞[false,true]
+    "NumberOfCoins": 1, //每日设定的投币数 [0,5]
+    "SelectLike": false, //投币时是否同时点赞[false,true]
     "SupportUpIds": "", //优先选择支持的up主Id集合，多个以英文逗号分隔，如："123,456"。配置后会优先从指定的up主下挑选视频进行观看、分享和投币，不配置或配置为-1则表示没有特别支持的up，会从关注和排行耪中随机获取支持视频
     "DayOfAutoCharge": -1, //每月几号自动充电[-1,31]，-1表示不指定，默认月底最后一天；0表示不充电
     "AutoChargeUpId": "341688380", //指定支持的UP主Id，-1表示自己
@@ -124,7 +124,7 @@
         "Name": "ServerChanBatched",
         "Args": {
           "scKey": "", //已过时，待删除
-          "turboScKey": "", //平台生成的ScKey
+          "turboScKey": "SCT125093TPUmBvZEvizUM8RpBzv98xj16", //平台生成的ScKey
           "restrictedToMinimumLevel": "Information"
         }
       },
