--- a/src/Ray.BiliBiliTool.Console/appsettings.json
+++ b/src/Ray.BiliBiliTool.Console/appsettings.json
@@ -20,6 +20,12 @@
     "DayOfExchangeSilver2Coin": 0, //每月几号执行银瓜子兑换硬币[-1,31]，-1表示不指定，默认每月最后一天；-2表示每天；0表示不进行兑换
     "DevicePlatform": "android" //执行客户端操作时的平台 [ios,android]
   },
+  
+  "UnfollowBatchedTaskConfig": {
+    "GroupName": "天选时刻", //取关的分组名称
+    "Count": 10, //本次取关个数（倒序，从后往前取关）
+    "RetainUids": "" //白名单（保留的UpId），多个用英文都好分隔，配置后，批量取关时不会取关配置的Up
+  },
 
   //安全相关配置
   "Security": {
